objects/Requirements_Object__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requirements Objects</relationshipLabel>
        <relationshipName>Requirements_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <label>Importance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mission_Critical__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Mission Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Influence_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirements_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requirements Object</label>
        <referenceTo>Requirements_Object__c</referenceTo>
        <relationshipLabel>Requirements Objects</relationshipLabel>
        <relationshipName>Requirements_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Requirements Object</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirements Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>